chore: new Locale(lang) => Locale.of(lang) (Deprecated JDK 19)