@@ -64,7 +64,7 @@ public class SendUserBooksVCFTask extends BlockingServerTask implements IServerT
 		this.backup = backup;
 		this.item = item;
 		this.executor = (RestoreActionExecutor<EmailData>) executor;
-		this.bundle = ResourceBundle.getBundle("OSGI-INF/l10n/RestoreAddressBook", new Locale(ServerSideServiceProvider
+		this.bundle = ResourceBundle.getBundle("OSGI-INF/l10n/RestoreAddressBook", Locale.of(ServerSideServiceProvider
 				.getProvider(SecurityContext.SYSTEM).getContext().getSecurityContext().getLang()));
 	}
 
